# ChangeLog for dev-php/pecl-crack
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-php/pecl-crack/ChangeLog,v 1.4 2012/08/24 05:00:58 xmw Exp $

  24 Aug 2012; Michael Weber <xmw@gentoo.org> pecl-crack-0.4-r2.ebuild:
  ppc stable (bug 427024).

  22 Aug 2012; Agostino Sarubbo <ago@gentoo.org> pecl-crack-0.4-r2.ebuild:
  Stable for amd64, wrt bug #427024

*pecl-crack-0.4-r2 (19 Aug 2012)

  19 Aug 2012; Ole Markus With <olemarkus@gentoo.org>
  +files/fix-php-5-4-support.patch, +pecl-crack-0.4-r2.ebuild:
  Revbump that should work with php 5.4. Bug 423869. Thanks to hanno for digging
  up the patch

  30 Jan 2011; Raúl Porcel <armin76@gentoo.org> pecl-crack-0.4.ebuild:
  Drop sparc keywords

  08 Jan 2011; Brent Baude <ranger@gentoo.org> pecl-crack-0.4-r1.ebuild:
  Marking pecl-crack-0.4-r1 ~ppc for bug 349659

  04 Jan 2011; Markos Chandras <hwoarang@gentoo.org> pecl-crack-0.4-r1.ebuild:
  Stable on amd64 wrt bug #349659

  04 Jan 2011; Christian Faulhammer <fauli@gentoo.org>
  pecl-crack-0.4-r1.ebuild:
  stable x86, bug 349659

  28 Dec 2010; Brent Baude <ranger@gentoo.org> pecl-crack-0.4-r1.ebuild:
  Marking pecl-crack-0.4-r1 ~ppc64 for bug 349659

*pecl-crack-0.4-r1 (04 Nov 2010)

  04 Nov 2010; Matti Bickel <mabi@gentoo.org> +pecl-crack-0.4-r1.ebuild:
  add version that supports minor version slotting

  09 May 2008; Christian Hoffmann <hoffie@gentoo.org> pecl-crack-0.4.ebuild:
  explicitly call phpize, not src_unpack (bug 220519)

  07 May 2008; Christian Hoffmann <hoffie@gentoo.org> pecl-crack-0.4.ebuild:
  calling php-ext-source-r1_src_unpack explicitly, bug 220519

  06 Dec 2007; Markus Ullmann <jokey@gentoo.org> pecl-crack-0.4.ebuild:
  LICENSE fix from project overlay

  02 Dec 2007; Jakub Moc <jakub@gentoo.org> pecl-crack-0.4.ebuild:
  Fix LICENSE

  20 Aug 2007; Markus Ullmann <jokey@gentoo.org> pecl-crack-0.4.ebuild:
  Stable on x86 wrt bug #187234
